# curve

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .gitreview  .obm.cfg  .travis.yml  0001-support-generate-compile_commands.json.patch  BUILD  CHANGELOG-1.0.md  CHANGELOG-1.1.md  CHANGELOG-1.2.md  CHANGELOG-1.3.md  CHANGELOG-2.0.md  CHANGELOG-2.1.md  CHANGELOG-2.2.md  CHANGELOG-2.3.md  CHANGELOG-2.4.md  CHANGELOG-2.5.md  CHANGELOG-2.6.md  CHANGELOG-2.7.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Community_Guidelines.md  Community_Guidelines_cn.md  Dockerfile  Dockerfile.develop  Dockerfile.unittest  LICENSE  LICENSE_LGPL  MAINTAINERS  MAINTAINERS.md  Makefile  README  README.md  (+25 more)
ldp_curve/: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.status  configure  configure.ac  ldp.cpp  ldp.h  ldp_curvefs_wrapper.cpp  ldp_curvefs_wrapper.h  ldp_glibc_curvefs.h  ldp_glibc_curvefs.h.org  libtool
ldp_curve/.deps/: ldp.Plo  ldp.Po  ldp_curvefs_wrapper.Po
ldp_curve/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2  traces.3
ldp_curve/server/: Makefile  Makefile.am  Makefile.in  curvefs_dbg.h  curvefs_server  curvefs_server.cpp
ldp_curve/test/: Makefile  Makefile.am  Makefile.in  test_access.cpp  test_allocsize.cpp  test_file_opt.cpp  test_fork.cpp  test_gflags.cpp
ldp_curve/test/.deps/: test_access-test_access.Po  test_file_opt.Po
libsysio/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  README  Rules.make  autogen.sh  config.status  configure  configure.in
libsysio/CVS/: Entries  Repository
libsysio/autom4te.cache/: output.0  requests  traces.0  traces.1
libsysio/dev/: module.mk  stddev.c  stddev.h
libsysio/dev/.deps/: stddev.Po
libsysio/dev/CVS/: Entries  Repository
libsysio/dev/stdfd/: module.mk  stdfd.c  stdfd.h
libsysio/drivers/CVS/: Repository
libsysio/drivers/curvefs/: fs_curve.cpp  fs_curve.h  module.mk
libsysio/drivers/incore/: README  fs_incore.c  fs_incore.h  module.mk
libsysio/drivers/native/: fs_native.c  fs_native.h  module.mk
libsysio/include/: creds.h  dev.h  file.h  fs.h  inode.h  module.mk  mount.h  native.h  smp.h  stddir.h  sysio-cmn.h  sysio-symbols.h  sysio.h  tree.h  xtio.h
libsysio/include/CVS/: Entries  Repository
libsysio/include/atomic_queue/: atomic_queue.h  atomic_queue_mutex.h  barrier.h  defs.h  spinlock.h
libsysio/misc/: fhi.c  fhi.h  gdb-libsysio  init-env.sh  module.mk
libsysio/misc/CVS/: Entries  Repository
libsysio/src/: access.c  chdir.c  chmod.c  chown.c  cprintf.c  dev.c  dup.c  fcntl.c  file.c  fs.c  fsync.c  getdirentries.c  init.c  inode.c  ioctl.c  ioctx.c  iowait.c  link.c  lseek.c  mkdir.c  mknod.c  module.mk  mount.c  namei.c  open.c  readdir.c  readdir64.c  readlink.c  reconcile.c  rename.c  rmdir.c  rw.c  smp_posix.c  stat.c  statvfs.c  stddir.c  symlink.c  tracing.c  tree.c  truncate.c  (+2 more)
libsysio/src/.deps/: dev.Po  (+37 more)
libsysio/tests/: Makefile  Makefile.am  Makefile.am.org  Makefile.in  README  config.h  curvefs_mount.cpp  curvefs_server.cpp  curvefs_startup.cpp  curvefs_test.cpp  curvefs_test.h  drv_init_all.c  fhi_support.c  fhi_support.h  fuse_i.h  gendrvdata.sh  module.mk  passthrough_ll.cpp  reqparse.cpp  reqparse.h  startup.c  sysio-run-start.c  test.h  test_acopy.c  test_chown.c  test_copy.c  test_fcntl_lock.c  test_fhichmod.c  test_fhicreate.c  test_fhilink.c  test_fhilist.c  test_fhimkdir.c  test_fhipath.c  test_fhirename.c  test_fhirmdir.c  test_fhisymlink.c  test_fhitrunc.c  test_fhiunlink.c  test_getcwd.c  test_link.c  (+12 more)
nebd/src/: CMakeLists.txt  logrotate.conf
src/part1/: BUILD  CMakeLists.txt  async_request_closure.cpp  connection_manager.cpp  connection_manager.h  heartbeat_manager.cpp  heartbeat_manager.h  libnebd.cpp  libnebd.h  libnebd_file.cpp  libnebd_file.h  nebd_client.cpp  nebd_client.h  nebd_common.h  nebd_lifecycle.cpp  nebd_lifecycle.h  nebd_metacache.cpp  nebd_metacache.h
src/part2/: BUILD  CMakeLists.txt  common_type.cpp  common_type.h  config.cpp  config.h  define.h  file_entity.cpp  file_entity.h  file_manager.cpp  file_manager.h  file_record_map.cpp  file_record_map.h  file_service.cpp  file_service.h  filerecord_manager.cpp  filerecord_manager.h  heartbeat.cpp  heartbeat.h  heartbeat_manager.cpp  heartbeat_manager.h  heartbeat_service.cpp  heartbeat_service.h  interrupt_sleep.h  main.cpp  metafile_manager.cpp  metafile_manager.h  nebd_server.cpp  nebd_server.h  rados_interface.cpp  rados_interface.h  reload.cpp  reload.h  request_executor.cpp  request_executor.h  request_executor_ceph.cpp  request_executor_ceph.h  request_executor_curve.cpp  request_executor_curve.h  rpc_ceph.cpp  (+6 more)
tests/common/: CMakeLists.txt  configuration_test.cpp  interruptible_sleeper_test.cpp  posix_wrapper_test.cpp  rw_lock_test.cpp  test_name_lock.cpp
tests/part1/: BUILD  CMakeLists.txt  client_server.cpp  fake_client_service.cpp  fake_client_service.h  fake_file_service.cpp  fake_file_service.h  fake_heartbeat_service.h  heartbeat_manager_unittest.cpp  mock_client_service.h  mock_file_service.h  mock_heartbeat_service.h  nebd-client-aio-test.conf  nebd-client.conf  nebd.conf  nebd_client_unittest.cpp  nebd_lib_unittest.cpp  nebd_test.cpp
tests/part2/: BUILD  CMakeLists.txt  TestCommon.cpp  TestCommon2.cpp  TestCommon3.cpp  TestConfig.cpp  TestHeartbeat.cpp  TestHeartbeat2.cpp  TestHeartbeat3.cpp  TestRados.cpp  TestReload.cpp  TestReload2.cpp  TestRpcCeph.cpp  TestRpcServer.cpp  file_manager_unittest.cpp  file_record_manager_unittest.cpp  file_record_map_unittest.cpp  file_service_unittest.cpp  heartbeat_manager_unittest.cpp  heartbeat_service_test.cpp  metafile_manager_test.cpp  mock_curve_client.h  mock_file_entity.h  mock_file_manager.h  mock_filerecord_manager.h  mock_heartbeat_manager.h  mock_metafile_manager.h  mock_request_executor.h  nebd-server.err.conf  test_common.cpp  test_common.h  test_common2.cpp  test_common2.h  test_config.cpp  test_heartbeat.cpp  test_heartbeat.h  test_heartbeat2.cpp  test_heartbeat2.h  test_heartbeat3.cpp  test_heartbeat3.h  (+10 more)
(+4196 files in other folders)
